# Qwen3-TTS-ncnn

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: speech_decoder_map.md  talker_forward_map.md
src/: pipeline.h  prefill.h  qwen3_tts.cpp  rope.h  snakebeta.h  wav.h
tests/: test_ar_loop.cpp  test_convtail.cpp  test_prefill.cpp  test_tokenizer.cpp  test_vocoder.cpp
tests/golden/: golden_codes.npy  golden_codes.txt  golden_token_ids.txt
tools/convert/: add_kvcache.py  convert_code_predictor.py  convert_decoder_convstack.py  convert_decoder_probe.py  convert_decoder_transformer.py  convert_talker.py  convert_talker_poc.py  dynamize_seqlen.py  extract_rvq_tables.py  make_ref_wav.py  parity_convstack.py  parity_decoder_tf.py  parity_talker.py  ref_dump.py  ref_gen.py  requirements.txt  verify_mrope_collapse.py
